[package]
name = "t10"
version = "0.1.0"
authors = ["ICEY <icey@icey.tech>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_call"
path = "src/bin/test_call.rs"

[features]
use_snmalloc = ["snmalloc-rs"]
use_mimalloc = ["mimalloc"]

[dependencies]
snmalloc-rs = { version = "0.2", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }

[profile.release]
debug = true

[profile.bench]
debug = true

